k8s/manifest/clusterip.yml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "planetarium-clusterip"
  namespace: "default"
  labels:
    app: "planetarium"
spec:
  ports:
    - name: http # this is needed for your service monitor to target this service
      protocol: "TCP"
      port: 80
      targetPort: 8080
  selector:
    app: "planetarium"
  type: "ClusterIP"
